# mlx-whisper-rs

./: Cargo.toml  README.md  build.rs
examples/: transcribe.rs
src/: audio.rs  decoding.rs  lib.rs  load_models.rs  tokenizer.rs  transcribe.rs  whisper.rs
