[package]
name = "mlx-whisper-rs"
version = "0.1.0"
edition = "2024"
description = "MLX-accelerated Whisper speech recognition for Apple Silicon"
license = "MIT"

[dependencies]
mlx-rs = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hf-hub = { version = "0.5", default-features = false, features = ["ureq"] }
anyhow = "1"
base64 = "0.22"
once_cell = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"

[dev-dependencies]
hound = "3"
